fix layout issues and refactor css
didn't branch, just made a copy and re-committed everything about issues were resolved.

--- a/styles/index.css
+++ b/styles/index.css
@@ -155,11 +155,133 @@ select {
   /* Accent Colors */
 }
 
-/* TODO Add color classes */
-.dark-bg {
+.primary {
+  color: var(--primary);
+}
+.on-primary {
+  color: var(--on-primary);
+}
+.primary-container {
+  color: var(--primary-container);
+}
+.on-primary-container {
+  color: var(--onprimary-container);
+}
+.secondary {
+  color: var(--secondary);
+}
+.on-secondary {
+  color: var(--on-secondary);
+}
+.secondary-container {
+  color: var(--secondary-container);
+}
+.on-secondary-container {
+  color: var(--onsecondary-container);
+}
+.tertiary {
+  color: var(--tertiary);
+}
+.on-tertiary {
+  color: var(--ontertiary-container);
+}
+.tertiary-container {
+  color: var(--tertiary-container);
+}
+.on-tertiary-container {
+  color: var(--ontertiary-container);
+}
+.error {
+  color: var(--error);
+}
+.on-error {
+  color: var(--on-error);
+}
+.error-container {
+  color: var(--error-container);
+}
+.on-error-container {
+  color: var(--onerror-container);
+}
+.background {
+  color: var(--background);
+}
+.on-background {
+  color: var(--on-background);
+}
+.surface {
+  color: var(--surface);
+}
+.on-surface {
+  color: var(--on-surface);
+}
+.surface-variant {
+  color: var(--surface-variant);
+}
+.on-surface-variant {
+  color: var(--onsurface-variant);
+}
+.outline {
+  color: var(--outline);
+}
+.outline-variant {
+  color: var(--outline-variant);
 }
 
 /* TYPOGRAPHY */
+
+/* Accessibility best practices */
+.wrapper {
+  /* max-width: 34em; */
+  paragraph-spacing: 2em;
+  word-spacing: 0.16em;
+  letter-spacing: 0.12em;
+}
+
+/* Font Sizes */
+.font-12 {
+  font-size: 12px;
+}
+
+.font-14 {
+  font-size: 14px;
+}
+
+.font-16 {
+  font-size: 16px;
+}
+
+.font-18 {
+  font-size: 18px;
+}
+
+.font-20 {
+  font-size: 20px;
+}
+
+.font-24 {
+  font-size: 24px;
+}
+
+.font-30 {
+  font-size: 30px;
+}
+
+.font-36 {
+  font-size: 36px;
+}
+
+.font-48 {
+  font-size: 48px;
+}
+
+.font-60 {
+  font-size: 60px;
+}
+
+.font-72 {
+  font-size: 72px;
+}
 
 h1,
 h2,
@@ -169,60 +291,6 @@ p,
 l1 {
   text-align: center;
   max-width: 75ch;
-}
-
-/* TODO Generalize the font sizes */
-/* 
- {
-  font-size: 12px;
-}
-
- {
-  font-size: 14px;
-}
-
- {
-  font-size: 16px;
-}
-
- {
-  font-size: 18px;
-}
-
- {
-  font-size: 20px;
-}
-
- {
-  font-size: 24px;
-}
-
- {
-  font-size: 30px;
-}
-
- {
-  font-size: 36px;
-}
-
- {
-  font-size: 48px;
-}
-
- {
-  font-size: 60px;
-}
-
- {
-  font-size: 72px;
-} */
-
-/* Accessibility best practices */
-.wrapper {
-  /* max-width: 34em; */
-  paragraph-spacing: 2em;
-  word-spacing: 0.16em;
-  letter-spacing: 0.12em;
 }
 
 h1 {
@@ -248,14 +316,25 @@ h4 {
 li {
   font-size: 1.1rem;
   font-weight: 100;
-  line-height: 1.5;
   list-style: none;
+  line-height: 1.5;
+}
+
+/* TODO REFACTOR */
+.title {
+  color: var(--on-background);
+}
+
+.subtitle {
+  font-size: 1.2rem;
+  font-weight: 300;
+  margin-top: 1rem;
+  color: var(--on-background);
 }
 
 .section-title {
   text-transform: uppercase;
   border-bottom: 1px solid var(--on-background);
-  /* margin-top: 50px; */
 }
 
 .font-sm {
@@ -263,26 +342,31 @@ li {
   font-weight: 100;
 }
 
-.font-quote {
+.quote {
   font-size: 1.7rem;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
-.tech-tools-text-container {
-  padding-right: 50px;
+.pre-footer-title,
+.pre-footer-subtitle {
+  color: var(--background);
 }
 
-.about-text-container {
-  padding-left: 50px;
+.footer-title,
+.footer-social-title {
+  text-transform: uppercase;
+  color: var(--primary);
+  margin-bottom: 10px;
 }
+
+/* TODO REFACTOR END */
 
 /* SHADOWS */
 
 /* box shadow */
 .box-shadow,
-.hero-section-container::before,
-.about-hero-container::before {
+.hero::before {
   box-shadow: 0 1px 3px hsla(0, 0%, 0%, 0.2);
 }
 
@@ -294,10 +378,8 @@ li {
 /* drop shadow */
 .drop-shadow,
 .image,
-.hero-title,
-.hero-subtitle,
-.pre-footer-title,
-.pre-footer-subtitle {
+.title,
+.subtitle {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 }
 
@@ -342,7 +424,8 @@ a:focus,
   transform: translateY(1px);
 }
 
-.btn:hover {
+.btn:hover,
+.btn:focus {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.09);
 }
 
@@ -365,13 +448,16 @@ a:active,
 /* ICONOGRAPHY */
 
 .icon {
-  padding: 30px;
+  padding: 0 15px;
   font-size: 24px;
+}
+
+.icons-container {
+  margin: 15px 0;
 }
 
 /* LAYOUT */
 
-/* Flex */
 .flex-col {
   display: flex;
   flex-direction: column;
@@ -386,22 +472,12 @@ a:active,
   align-items: center;
 }
 
-/* Global Containers */
-.main-container {
-  width: 100%;
-}
-
 .container {
   width: 90%;
-  margin: 40px auto;
+  margin: 50px auto;
 }
 
 /* HEADER */
-
-.header-container {
-  height: 75px;
-  margin: auto auto;
-}
 
 .header-logo > a {
   white-space: nowrap;
@@ -414,53 +490,37 @@ a:active,
 }
 
 .header-nav > a {
-  font-weight: 300;
   margin-left: 20px;
 }
 
-/* PRE-FOOTER */
-
-.pre-footer-title,
-#pre-footer-subtitle {
-  color: var(--background);
-}
-
-#pre-footer-subtitle {
-  font-size: 1.2rem;
-  font-weight: 300;
-  margin-top: 1rem;
-}
-
 /* FOOTER */
-
-.footer-title,
-.footer-social-title {
-  text-transform: uppercase;
-  color: var(--primary);
-}
-
-.footer-title {
-  margin-bottom: 10px;
-}
 
 .footer-social-title {
   margin-top: 50px;
 }
 
-/* HERO */
+/* HERO AND PRE-FOOTER */
 
-.hero-container,
-.pre-footer-container {
+.hero,
+.pre-footer {
   height: 60vh;
   width: 100%;
   position: relative;
 }
 
-.index-hero-container::before,
-.projects-hero-container::before,
-.about-hero-container::before,
-.contact-hero-container::before,
-.pre-footer-container::before {
+.hero-text,
+.pre-footer-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.index-hero::before,
+.projects-hero::before,
+.about-hero::before,
+.contact-hero::before,
+.pre-footer::before {
   content: '';
   position: absolute;
   top: 0;
@@ -474,11 +534,12 @@ a:active,
   transition: filter 0.5s;
 }
 
-.index-hero-container:hover::before,
-.projects-hero-container:hover::before,
-.about-hero-container:hover::before,
-.contact-hero-container:hover::before,
-.pre-footer-container:hover::before {
+/* remove grayscale filter on hero images */
+.index-hero:hover::before,
+.projects-hero:hover::before,
+.about-hero:hover::before,
+.contact-hero:hover::before,
+.pre-footer:hover::before {
   filter: none;
 }
 
@@ -488,22 +549,22 @@ a:active,
   border-radius: 16px;
 }
 
-.index-hero-container::before {
+.index-hero::before {
   background-image: url('/public/images/heros/hero-index.jpg');
 }
 
-.projects-hero-container::before {
+.projects-hero::before {
   background-image: url('/public/images/heros/hero-projects.jpg');
 }
 
-.about-hero-container::before {
+.about-hero::before {
   background-image: url('/public/images/heros/hero-about.jpg');
 }
-.contact-hero-container::before {
+.contact-hero::before {
   background-image: url('/public/images/heros/hero-contact.jpg');
 }
 
-.pre-footer-container::before {
+.pre-footer::before {
   background-image: url('/public/images/heros/pre-footer.jpg');
 }
 
@@ -517,7 +578,7 @@ a:active,
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #333;
+  background-color: var(--on-background);
   overflow: hidden;
   text-align: center;
 }
